--- a/.env.template
+++ b/.env.template
@@ -5,3 +5,7 @@ EMAIL_HOST_PASSWORD= 'password'
 EMAIL_PORT= 587
 EMAIL_USE_TLS= True
 DEFAULT_FROM_EMAIL= EMAIL_HOST_USER
+
+POSTGRES_DB=test
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
