--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,7 @@ DEFAULT_FROM_EMAIL= EMAIL_HOST_USER
 POSTGRES_DB=test
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
+
+GOOGLE_MAPS_API_KEY=
+FCM_API_KEY=
+GCM_API_KEY=
